--- a/assignment1/AssignmentReport-Group1.ipynb
+++ b/assignment1/AssignmentReport-Group1.ipynb
@@ -38,6 +38,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In logistic regression we have the $\\hat{y}^{n} = f(x^{n}) = \\frac{1}{1+e^{-w^{T}x^{n}}}$ which is the Sigmoid activation function. \\\\\n",
+    "The cost function we want to take the gradient of is: $C(w) = \\frac{1}{N}\\sum_{n=1}^{N} C^n$, where C^{n}(w) = - (y^n ln(\\hat{y}^n) + (1-y^n)ln(1-\\hat{y}^n))\n",
+    "The expression can be divided into two parts and then sum them together after they have been differemtiated. $g^n(w) = y^n ln(\\hat{y}^n)$ and $h^n(w) = (1-y^n)ln(1-\\hat{y}^n)$\n",
+    "By using the hint $\\frac{\\delta f(x^n)}{\\delta w_i} = x_{i}^{n} f(x^n)(1-f(x^n))$ we get:\n",
+    "$\\frac{\\delta g^n(w)}{\\delta w_i} = \\frac{\\delta y^n ln f(x^n)}{\\delta w_i} = y^n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## task 1a)\n",
     "\n",
     "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here"
