--- a/Project/SSD/visualize_model_cam.ipynb
+++ b/Project/SSD/visualize_model_cam.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-05-05 17:25:53,360 [INFO ] Loaded checkpoint from outputs\\tdt4265_fpn\\checkpoints\\51.ckpt\n"
+      "2022-05-05 18:20:01,112 [INFO ] Loaded checkpoint from outputs\\tdt4265_fpn\\checkpoints\\51.ckpt\n"
      ]
     },
     {
@@ -300,7 +300,7 @@
        ")"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,17 +337,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.cuda.empty_cache()\n",
-    "wrapped_model = RetinaNetOutputWrapper(model).eval()"
+    "# torch.cuda.empty_cache()\n",
+    "\n",
+    "wrapped_model = RetinaNetOutputWrapper(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,34 +379,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 3, 128, 1024])\n",
-      "<class 'list'>\n",
-      "tensor([1, 1, 1, 1, 1, 1, 1, 1, 7], device='cuda:0')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(input_tensor.unsqueeze(0).shape)\n",
-    "output = wrapped_model.model(input_tensor.unsqueeze(0))\n",
-    "print(type(output))\n",
-    "print(output[0][1])"
+    "# print(input_tensor.unsqueeze(0).shape)\n",
+    "# output = wrapped_model(input_tensor.unsqueeze(0))\n",
+    "# print(type(output))\n",
+    "# print(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reshape_transform(x):\n",
-    "    target_size = x['pool'].size()[-2 : ]\n",
+    "    print(x)\n",
+    "    target_size = x[1].size()[-2 : ]\n",
     "    activations = []\n",
     "    for key, value in x.items():\n",
     "        activations.append(torch.nn.functional.interpolate(torch.abs(value), target_size, mode='bilinear'))\n",
@@ -415,9 +407,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'FeaturePyramidNetwork' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\sebsk\\Documents\\Git\\TDT4265_StarterCode\\Project\\SSD\\visualize_model_cam.ipynb Cell 12'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/sebsk/Documents/Git/TDT4265_StarterCode/Project/SSD/visualize_model_cam.ipynb#ch0000024?line=0'>1</a>\u001b[0m cam \u001b[39m=\u001b[39m EigenCAM(wrapped_model, \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sebsk/Documents/Git/TDT4265_StarterCode/Project/SSD/visualize_model_cam.ipynb#ch0000024?line=1'>2</a>\u001b[0m     target_layers\u001b[39m=\u001b[39;49mmodel\u001b[39m.\u001b[39;49mfeature_extractor\u001b[39m.\u001b[39;49mfpn, \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sebsk/Documents/Git/TDT4265_StarterCode/Project/SSD/visualize_model_cam.ipynb#ch0000024?line=2'>3</a>\u001b[0m     use_cuda\u001b[39m=\u001b[39;49mtorch\u001b[39m.\u001b[39;49mcuda\u001b[39m.\u001b[39;49mis_available(), \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sebsk/Documents/Git/TDT4265_StarterCode/Project/SSD/visualize_model_cam.ipynb#ch0000024?line=3'>4</a>\u001b[0m     reshape_transform\u001b[39m=\u001b[39;49mreshape_transform)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/sebsk/Documents/Git/TDT4265_StarterCode/Project/SSD/visualize_model_cam.ipynb#ch0000024?line=5'>6</a>\u001b[0m cam\u001b[39m.\u001b[39muses_gradients\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m\n",
+      "File \u001b[1;32mC:\\ProgramData\\Miniconda3\\envs\\SSD\\lib\\site-packages\\pytorch_grad_cam\\eigen_cam.py:10\u001b[0m, in \u001b[0;36mEigenCAM.__init__\u001b[1;34m(self, model, target_layers, use_cuda, reshape_transform)\u001b[0m\n\u001b[0;32m      <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/eigen_cam.py?line=7'>8</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, model, target_layers, use_cuda\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m      <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/eigen_cam.py?line=8'>9</a>\u001b[0m              reshape_transform\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m---> <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/eigen_cam.py?line=9'>10</a>\u001b[0m     \u001b[39msuper\u001b[39;49m(EigenCAM, \u001b[39mself\u001b[39;49m)\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m(model, target_layers, use_cuda,\n\u001b[0;32m     <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/eigen_cam.py?line=10'>11</a>\u001b[0m                                    reshape_transform)\n",
+      "File \u001b[1;32mC:\\ProgramData\\Miniconda3\\envs\\SSD\\lib\\site-packages\\pytorch_grad_cam\\base_cam.py:27\u001b[0m, in \u001b[0;36mBaseCAM.__init__\u001b[1;34m(self, model, target_layers, use_cuda, reshape_transform, compute_input_gradient, uses_gradients)\u001b[0m\n\u001b[0;32m     <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/base_cam.py?line=24'>25</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcompute_input_gradient \u001b[39m=\u001b[39m compute_input_gradient\n\u001b[0;32m     <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/base_cam.py?line=25'>26</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39muses_gradients \u001b[39m=\u001b[39m uses_gradients\n\u001b[1;32m---> <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/base_cam.py?line=26'>27</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivations_and_grads \u001b[39m=\u001b[39m ActivationsAndGradients(\n\u001b[0;32m     <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/base_cam.py?line=27'>28</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmodel, target_layers, reshape_transform)\n",
+      "File \u001b[1;32mC:\\ProgramData\\Miniconda3\\envs\\SSD\\lib\\site-packages\\pytorch_grad_cam\\activations_and_gradients.py:11\u001b[0m, in \u001b[0;36mActivationsAndGradients.__init__\u001b[1;34m(self, model, target_layers, reshape_transform)\u001b[0m\n\u001b[0;32m      <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/activations_and_gradients.py?line=8'>9</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreshape_transform \u001b[39m=\u001b[39m reshape_transform\n\u001b[0;32m     <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/activations_and_gradients.py?line=9'>10</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles \u001b[39m=\u001b[39m []\n\u001b[1;32m---> <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/activations_and_gradients.py?line=10'>11</a>\u001b[0m \u001b[39mfor\u001b[39;00m target_layer \u001b[39min\u001b[39;00m target_layers:\n\u001b[0;32m     <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/activations_and_gradients.py?line=11'>12</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles\u001b[39m.\u001b[39mappend(\n\u001b[0;32m     <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/activations_and_gradients.py?line=12'>13</a>\u001b[0m         target_layer\u001b[39m.\u001b[39mregister_forward_hook(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msave_activation))\n\u001b[0;32m     <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/activations_and_gradients.py?line=13'>14</a>\u001b[0m     \u001b[39m# Because of https://github.com/pytorch/pytorch/issues/61519,\u001b[39;00m\n\u001b[0;32m     <a href='file:///c%3A/ProgramData/Miniconda3/envs/SSD/lib/site-packages/pytorch_grad_cam/activations_and_gradients.py?line=14'>15</a>\u001b[0m     \u001b[39m# we don't use backward hook to record gradients.\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'FeaturePyramidNetwork' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "cam = EigenCAM(wrapped_model, \n",
     "    target_layers=model.feature_extractor.fpn, \n",
@@ -429,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
